--- a/event_create.html
+++ b/event_create.html
@@ -277,6 +277,14 @@
   }
 
 }
+
+
+.input-checkbox input {
+	position: relative;
+	opacity: 1;
+	top: 0.1em;
+}
+
   /*
 === THis is for the underline section. move this to a constants file
 */
