Add Copy Link button to share page

--- a/thanks.html
+++ b/thanks.html
@@ -407,12 +407,11 @@
 									<h4 class="icon-after icon-faded" data-icon="&#xE94E;">{% filter ak_text:"general_share" %}Share{% endfilter %}</h4>
 								</div>
 								<div class="bg-ltgray box box-medium">
-									<p class="text-small"><em>{% filter ak_text:"general_share_custom_instructions" %}Copy and paste this info into whatever app you use for messaging:{% endfilter %}</em></p>
 								{% if page.custom_fields.page_is_c4 %}{% else %}
-								<div class="general-share-url">
+								<div class="general-share-url margin-bottom-medium">
 									<h4 class="text-small margin-bottom-none"><span class="highlight bg-midgray">{% filter ak_text:"general_share_link" %}Share Link:{% endfilter %}</span></h4>
-									<input id="page-link-url-general" type="text" class="border margin-bottom-medium bg-white page-link-url js-click-to-select-text"  value="{{ page.canonical_url }}" readonly>
 									<!-- p class="text-right text-small2"><em>(tap or click to select)</em></p -->
+									<a href="#" class="bg-dkgray copy-link button button-small margin-top-small">{% filter ak_text:"general_share_link_copy_button" %}Copy Link{% endfilter %}</a>
 								</div>
 								{% endif %}
 								<div class="general-share-description">
@@ -526,12 +525,16 @@ actionkit.forms.initForm('act');
 
 jQuery(document).ready(function($){
 	var shareURL = '/share/link?type=ot&page_name={{page.name}}';
-	$.ajax({
+	$('.copy-link').on('click', function () {
+		$.ajax({
 		method: 'GET',
 		url: shareURL,
 	}).done(function(shareURL) {
 		$('#page-link-url-general').val(shareURL);
+		navigator.clipboard.writeText(shareURL);
 	});
+
+	})
 });
 </script>
 
