--- a/thanks.html
+++ b/thanks.html
@@ -524,15 +524,14 @@ actionkit.forms.initForm('act');
 
 
 jQuery(document).ready(function($){
-	var shareURL = '/share/link?type=ot&page_name={{page.name}}';
+	var shareURL = '/share/link?type=ot&short=1&action_id={{action.id}}';
 	$('.copy-link').on('click', function () {
 		$.ajax({
 		method: 'GET',
 		url: shareURL,
 	}).done(function(shareURL) {
-		var finalURL = shareURL + '&type=OT&short=1';
-		$('#page-link-url-general').val(finalURL);
-		navigator.clipboard.writeText(finalURL);
+		$('#page-link-url-general').val(shareURL);
+		navigator.clipboard.writeText(shareURL);
 	});
 
 	})
