--- a/thanks.html
+++ b/thanks.html
@@ -486,16 +486,7 @@
 			</div>
 		</div>
 			{% if page.custom_fields.thanks_show_map %}
-			<div id="map-embed-350org" style="height: 70vh;"
-				data-src-layers="events"
-				data-src-campaign-names="globalclimatestrike,globalclimatestrike-fff,us-climate-strikes"
-				{% if user.country %}data-src-search="{{ user.country }} {{ user.postal }}"{% endif %}
-				data-src-lang="">
-			<script type="text/javascript">
-				var langcode = document.getElementsByTagName('html')[0].getAttribute('lang');
-				document.getElementById('map-embed-350org').setAttribute('data-src-lang', langcode);
-			</script>
-				<script src="https://350map.org/main.js"></script>
+      <div id="map-embed-350org"></div> 
 			{% endif %}
 
 	</section>
