--- a/event_search_results.html
+++ b/event_search_results.html
@@ -136,4 +136,12 @@ $(document).ready(function(){
 });
 </script>
 
+<style>
+	@media screen and (max-width:480px) {
+		.event-description {
+			display: none;
+		}
+	}
+</style>
+
 {% endfilter %}
