Update label for CVV

--- a/recurring_info.html
+++ b/recurring_info.html
@@ -49,7 +49,7 @@
           
           <div class="ak-change-cc clearfix" style="display: none">
               <label class="c4 alignright text-strong" for="card_code_{{ profile.id }}">
-                  Verification Number
+                  Security Code
               </label>
               <div class="c5">
                 <input id="card_code_{{ profile.id }}" type="text" name="card_code" size="6"  style="max-width: 33%" disabled=true>
