Update button color to blue on cancel donation page

--- a/recurring_cancel.html
+++ b/recurring_cancel.html
@@ -40,7 +40,7 @@
 
 </form>
 
-<div><button type="submit" class="submit js-modal" data-modal-source="#confirmationPopup">Cancel Donation</button></div>
+<div><button type="submit" class="submit js-modal button bg-blue" data-modal-source="#confirmationPopup">Cancel Donation</button></div>
 </div>
 {% endfor %}
 {% else %}
@@ -65,8 +65,8 @@ We have to have a form, or the JavaScript doesn't work.
 
 <div id="confirmationPopup" class="js-hide js-hidden">
 <h2 class="text-center">Are you sure?</h2>
-<button id="lowerBtn" class="submit submitConfirm float-left">Lower your monthly gift amount instead</button>
-<button id="cancelBtn" class="submit submitConfirm">Yes, I'm sure. Cancel my donation</button>
+<button id="lowerBtn" class="submit submitConfirm float-left button bg-blue">Lower your monthly gift amount instead</button>
+<button id="cancelBtn" class="submit submitConfirm button bg-blue">Yes, I'm sure. Cancel my donation</button>
 </div>
 <script type="text/ak-template" for="inactive">
 [% if (inactive.length) { %]
